tweaked styling and squashed a bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ main {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 25px 50px;
+    padding: 25px 50;
 }
 
 .main-text {
@@ -56,7 +56,7 @@ main {
     font-size: 40px;
     font-weight: bold;
     text-align: center;
-    padding-bottom: 25px;
+    padding: 25px 50px;
 }
 
 .second-text {
@@ -71,7 +71,7 @@ main {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 680px;
+    width: 100%;
     padding: 25px 50px;
 }
 
